2009-06-14  Vivek Dasmohapatra  <vivek@etla.org>

	* handlers/notify_search_callback.c: 
	(_h_elim_notify_search_callback): check gc, row & button are all valid
	(_h_elim_notify_search_callback): get search cache with sid, not call id
	(_h_elim_notify_search_callback): extract row data correctly

	* elisp/garak.el (garak-search-results-buffer): cache args in buffer
	(garak-notify-search-callback): pass search id back in callback

	* elim-rpc.c (check_cb_data): abort if no key passed in

2009-06-13  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el: implement search reulst display/action UI.
	* ui_ops/notify_ui_ops.c (_elim_notify_search): pass on the account uid

2009-06-05  Vivek Dasmohapatra  <vivek@etla.org>

	* handlers/notify_search_callback.c: search callbacks (add, join etc)
	(_h_elim_notify_search_callback): handle search result action "buttons"

	* ui_ops/notify_ui_ops.c: search results 
	(_elim_notify_search): notification to send search meta-data
	(_elim_notify_search_rows): sub-notification to sends search results

	* xnode/xnode.c (xnode_list_item_string): add strimg item to sexp list

	* elim-rpc.h (LS_STR): add string to sexp list structure
	(LS_NODE): add generic node to sexp list structure
	(NOTIFY_RESP): move typedef so it is visible to ui_ops _and_ handlers
	(CB_HANDLER): add 'type' member to struct
	(NOTIFY_RESP): add user_data and sres members

	* elim-rpc.c (check_cb_data): peek at cb data without removing it

2009-05-28  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el (garak-mode-map): start to define garak keymap
	(garak-activate)  : connect account(s) associated with buffer
	(garak-deactivate): disconnect account(s) or leave conversation
	(garak-toggle-offline-buddies): hide/show offline buddies
	(garak-mode): add `:group' to mode definition to allow customisation

2009-05-23  Vivek Dasmohapatra  <vivek@etla.org>

	* icons/blocked.png: new icon.

	* elisp/elim.el (elim-toggle-user-blocked): implement toggle privacy op
